@@ -6,7 +6,7 @@ plugins {
     id 'io.seqera.wave.groovy-application-conventions'
     id "com.github.johnrengelman.shadow" version "7.1.1"
     id "io.micronaut.minimal.application" version "3.7.0"
-    id "com.google.cloud.tools.jib" version "3.2.1"
+    id "com.google.cloud.tools.jib" version "3.4.0"
     id 'org.asciidoctor.jvm.convert' version '3.3.2'
 }
 
@@ -48,10 +48,10 @@ dependencies {
     implementation 'dev.failsafe:failsafe:3.1.0'
     implementation('io.projectreactor:reactor-core')
     implementation("io.seqera:tower-crypto:22.4.0-watson") { transitive = false }  // to be replaced with 22.4.0 once released
-    implementation 'org.apache.commons:commons-compress:1.21'
+    implementation 'org.apache.commons:commons-compress:1.24.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
-    implementation 'io.kubernetes:client-java:18.0.0'
-    implementation 'io.kubernetes:client-java-api-fluent:18.0.0'
+    implementation 'io.kubernetes:client-java:18.0.1'
+    implementation 'io.kubernetes:client-java-api-fluent:18.0.1'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
@@ -67,13 +67,14 @@ dependencies {
     implementation "software.amazon.awssdk:ecrpublic"
     implementation 'com.amazonaws:aws-java-sdk-ses:1.12.42'
     implementation 'org.yaml:snakeyaml:2.0'
+    //object storage dependency
+    implementation("io.micronaut.objectstorage:micronaut-object-storage-aws")
     // this sts dependency is require by micronaut-aws-parameter-store,
     // not directly used by the app, for this reason keeping `runtimeOnly`
     runtimeOnly "software.amazon.awssdk:sts"
 
     runtimeOnly("io.netty:netty-tcnative-boringssl-static:2.0.0.Final")
     runtimeOnly("javax.xml.bind:jaxb-api:2.3.1")
-    testImplementation "org.apache.commons:commons-compress:1.21"
     testImplementation("org.testcontainers:testcontainers")
     testImplementation("org.testcontainers:mysql:1.17.3")
 
@@ -141,7 +142,8 @@ jib {
 
 run{
     def envs = findProperty('micronautEnvs')
-    def args = ["-Dmicronaut.environments=$envs"]
+    // note: "--enable-preview" is required to use virtual threads on Java 19 and 20
+    def args = ["-Dmicronaut.environments=$envs","--enable-preview"]
     if( environment['JVM_OPTS'] ) args.add(environment['JVM_OPTS'])
     jvmArgs args
     systemProperties 'DOCKER_USER': project.findProperty('DOCKER_USER') ?: environment['DOCKER_USER'],
